--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/web-build-prod.json");
     </script>
+    <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    body {background-color: powderblue;}
+    canvas {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+    }
+    </style>
   </head>
   <body>
     <div id="gameContainer" style="width: 960px; height: 600px; margin: auto"></div>
