--- a/index.html
+++ b/index.html
@@ -13,15 +13,23 @@
       margin: 0;
       padding: 0;
     }
-    body {background-color: powderblue;}
+    body {background-color: #241F20;}
     canvas {
       width: 100%;
       height: 100%;
       position: absolute;
     }
+
+    #gameContainer {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0
+    }
     </style>
   </head>
   <body>
-    <div id="gameContainer" style="width: 960px; height: 600px; margin: auto"></div>
+    <div id="gameContainer"></div>
   </body>
 </html>
