--- a/index.html
+++ b/index.html
@@ -13,23 +13,43 @@
       margin: 0;
       padding: 0;
     }
-    body {background-color: #241F20;}
-    canvas {
+    body {
+      background-color: white;
       width: 100%;
       height: 100%;
+    }
+
+    .outer {
+      display: table;
       position: absolute;
+      height: 100%;
+      width: 100%;
+    }
+
+    .middle {
+      display: table-cell;
+      vertical-align: middle;
+    }
+
+    .inner {
+      margin-left: auto;
+      margin-right: auto;
+      width: 960px;
     }
 
     #gameContainer {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0
+      width: 960px;
+      height: 600px;
     }
     </style>
   </head>
   <body>
-    <div id="gameContainer"></div>
+    <div class ="outer">
+      <div class="middle">
+        <div class="inner">
+          <div id="gameContainer"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
