--- a/index.html
+++ b/index.html
@@ -6,50 +6,29 @@
     <title>Unity WebGL Player | poop-game</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/web-build-prod.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/web-build1.json");
     </script>
     <style>
     * {
       margin: 0;
       padding: 0;
     }
-    body {
-      background-color: white;
+    body {background-color: #241F20;}
+    canvas {
       width: 100%;
       height: 100%;
-    }
-
-    .outer {
-      display: table;
       position: absolute;
-      height: 100%;
-      width: 100%;
     }
-
-    .middle {
-      display: table-cell;
-      vertical-align: middle;
-    }
-
-    .inner {
-      margin-left: auto;
-      margin-right: auto;
-      width: 960px;
-    }
-
     #gameContainer {
-      width: 960px;
-      height: 600px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0
     }
     </style>
   </head>
   <body>
-    <div class ="outer">
-      <div class="middle">
-        <div class="inner">
-          <div id="gameContainer"></div>
-        </div>
-      </div>
-    </div>
+    <div id="gameContainer"></div>
   </body>
 </html>
