--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | poop-game</title>
-    <script src="Build/UnityLoader.js"></script>
+    <script src="Build/4f4a801b6b63c0b659f1f3ab02f9dce0.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/web-build1.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/30ded69d5413f9a726a07a41933c8acd.json");
     </script>
     <style>
     * {
